--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -850,9 +850,10 @@ button.leaflet-control-search-next
 .w2ui-icon.closemobile{ background: url('images/lc_closedocmobile.svg') no-repeat center !important; }
 .w2ui-icon.editmode { background: url('images/lc_listitem-selected.svg') no-repeat center / 28px !important; }
 .w2ui-icon.closetoolbar{ background: url('images/close_toolbar.svg') no-repeat center !important; }
-.w2ui-icon.sidebar_modify_page{ background: url('images/cmd/configuredialog.svg') no-repeat center !important; }
+.w2ui-icon.sidebar{ background: url('images/cmd/sidebar.svg') no-repeat center !important; }
+.w2ui-icon.sidebar_modify_page{ background: url('images/cmd/slidesetup.svg') no-repeat center !important; }
 .w2ui-icon.sidebar_slide_change{ background: url('images/cmd/slidechangewindow.svg') no-repeat center !important; }
-.w2ui-icon.sidebar_custom_animation{ background: url('images/lc_customanimation.svg') no-repeat center !important; }
+.w2ui-icon.sidebar_custom_animation{ background: url('images/cmd/diaeffect.svg') no-repeat center !important; }
 .w2ui-icon.sidebar_master_slides{ background: url('images/cmd/slidemasterpage.svg') no-repeat center !important; }
 .w2ui-icon.mobile_wizard{ background: url('images/lc_mobile_wizard.svg') no-repeat center !important; }
 .w2ui-icon.fullscreen-presentation{ background: url('images/lc_fullscreen-presentation-toolbar-mobile.svg') no-repeat center !important;}
