--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -176,7 +176,7 @@
 #toolbar-wrapper.hasnotebookbar {
 	background: var(--color-background-lighter);
 	position: relative;
-	z-index: 11;
+	/* z-index: 11; */
 }
 
 .cell.notebookbar {
