Sidebar: 增加背景色

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -15,6 +15,7 @@
 	padding: 0;
 	margin-top: 0 !important;
 	box-sizing: border-box;
+	background-color: var(--color-main-background);
 }
 
 [data-userinterfacemode='classic'] #document-container:not(.mobile) + #sidebar-dock-wrapper,
