--- a/loleaflet/css/leaflet.css
+++ b/loleaflet/css/leaflet.css
@@ -723,7 +723,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 	border-radius: 6px;
 	border: 2px #e0e0e0 solid;
 	box-shadow: 5px 5px 5px rgba(128, 128, 128, 0.7);
-	/* z-index: -1; */
+	z-index: -1;
 	opacity: 0;
 }
 
@@ -732,7 +732,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 	height: auto;
 	padding: 0px;
 	opacity: 0.9;
-	/* z-index: 100; */
+	z-index: 100;
 }
 
 textarea.clipboard {
@@ -749,7 +749,7 @@ textarea.clipboard {
 				    the padding to non-zero. Hence, the !important. Otherwise,
 				    clipboard cursor apperas in MSIE and MSEdge */
 	border: 0px !important;
-	/* z-index: -1; */
+	z-index: -1;
 }
 
 textarea.clipboard.overspot {
@@ -758,7 +758,7 @@ textarea.clipboard.overspot {
 	margin-right: 4px;
 	margin-bottom: 0px;
 	height: 16px;
-	/* z-index: 100; */
+	z-index: 100;
 }
 
 .clipboard:focus {
