--- a/loleaflet/css/oxool.css
+++ b/loleaflet/css/oxool.css
@@ -241,7 +241,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	border-spacing: 0;
 	width: 100%;
 	border-top: none;
-	/* z-index: 11 !important; */
+	z-index: 11 !important;
 	border-bottom: 1px solid var(--color-border);
 	background-color: var(--color-background-lighter);
 }
