--- a/loleaflet/css/toolbar.css
+++ b/loleaflet/css/toolbar.css
@@ -4,7 +4,7 @@
 	padding-left: 9px;
 	padding-right: 0px;
 	text-align: center;
-	/* z-index: 999; */
+	z-index: 999;
 	overflow: visible !important;
 	background-color: transparent;
 }
@@ -15,7 +15,7 @@
 	text-align: center;
 	padding: 0;
 	bottom: 0;
-	/* z-index: 11; */
+	z-index: 11;
 	border-top: 1px solid var(--color-border);
 	display: block;
 }
@@ -92,7 +92,7 @@ w2ui-toolbar {
 	right: 10px;
 	top: 40px;
 	border: 1px solid var(--color-border);
-	/* z-index: 1000; */
+	z-index: 1000;
 	display: none;
 	overflow: visible !important;
 }
@@ -188,7 +188,7 @@ w2ui-toolbar {
  * as a container
  */
 .select2-container {
-	/* z-index: 1000; */
+	z-index: 1000;
 }
 
 .select2-container .select2-selection--single {
@@ -197,7 +197,7 @@ w2ui-toolbar {
 
 .w2ui-scroll-left,
 .w2ui-scroll-right {
-	/* z-index: 1001; */
+	z-index: 1001;
 	background-color: var(--color-background-dark);
 	box-shadow: 0px 0px 7px var(--color-box-shadow);
 }
