--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -62,24 +62,28 @@
 .notebookbar-shortcuts-bar {
 	display: inline-block;
 	position: relative;
+	height: 26px;
 	z-index: 1000;
 	box-sizing: border-box;
+	border: 1px solid var(--color-border-dark);
+	background: var(--color-background-dark);
+	border-radius: var(--border-radius);
 }
 
 .notebookbar-shortcuts-bar > table {
 	display: block;
-	height: 31px;
+	height: 32px;
 }
 
 .notebookbar-shortcuts-bar .unotoolbutton.notebookbar .unobutton {
-	width: 16px !important;
-	height: 16px !important;
+	width: 18px !important;
+	height: 18px !important;
 	margin: 0 !important;
 }
 
 .notebookbar-shortcuts-bar .notebookbar.unotoolbutton {
-	height: 27px;
-	width: 24px;
+	height: 20px;
+	width: 20px;
 	display: flex;
 	margin: 0px !important;
 	align-items: center;
