--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -374,28 +374,28 @@ li .disabled .keyboard {
 }
 
 .writer-icon-img {
-	background-image: url('images/res/odt.svg');
+	background-image: url('images/x-office-document.svg');
 	background-size: 28px 28px;
 	background-repeat: no-repeat;
 	background-position: bottom;
 }
 
 .calc-icon-img {
-	background-image: url('images/res/ods.svg');
+	background-image: url('images/x-office-spreadsheet.svg');
 	background-size: 28px 28px;
 	background-repeat: no-repeat;
 	background-position: bottom;
 }
 
 .impress-icon-img {
-	background-image: url('images/res/odp.svg');
+	background-image: url('images/x-office-presentation.svg');
 	background-size: 28px 28px;
 	background-repeat: no-repeat;
 	background-position: bottom;
 }
 
 .draw-icon-img {
-	background-image: url('images/res/odg.svg');
+	background-image: url('images/x-office-drawing.svg');
 	background-size: 28px 28px;
 	background-repeat: no-repeat;
 	background-position: bottom;
