document logo changed to branding logo.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I834b2037918f88556a68f5da5f9f3fab5ee33da4

--- a/ossii/browser/css/branding-desktop.css
+++ b/ossii/browser/css/branding-desktop.css
@@ -1,3 +1,14 @@
+/* Document logo */
+body #document-header .document-logo {
+	background-image: url('images/res/logo_inverted.svg') !important;
+	background-repeat: no-repeat !important;
+	background-size: contain !important;
+	background-position: center !important;
+	width: 128px !important;
+	height: 128px !important;
+	margin-left: 8px !important;
+}
+
 /* About dialog */
 #integrator-logo {
 	flex-grow: 1 !important;
