annotation: hide deleted tracked comment if "show" option is off
Signed-off-by: Pranam Lashkari <lpranam@collabora.com>
Change-Id: Iedea40c331892140db66766e6d622e2db4da499e

--- a/browser/css/oxool.css
+++ b/browser/css/oxool.css
@@ -506,8 +506,12 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	width: 250px;
 }
 
-.oxool-annotation.greyed {
+.oxool-annotation.tracked-deteled-comment-show {
 	opacity: 0.5;
+}
+
+.oxool-annotation.tracked-deteled-comment-hide {
+	display: none;
 }
 
 .oxool-annotation > .modalpopup {
