annotation: fixed resolved comments are not hidden completly
problem:
when we turn off the option to show the resolved comments,
author image was not hidden and stuck on screen which can't be interacted or scrolled

Signed-off-by: Pranam Lashkari <lpranam@collabora.com>
Change-Id: Id0fb30c787b6e8c288df1142b9f882b7633f3dc9

--- a/browser/css/oxool.css
+++ b/browser/css/oxool.css
@@ -605,6 +605,10 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	background: var(--color-background-lighter) !important;
 }
 
+.oxool-annotation-collapsed-show .oxool-annotation-img {
+	visibility: visible;
+}
+
 #mobile-wizard-popup {
 	background-color: var(--color-background-lighter) !important;
 }
