--- a/browser/css/oxool.css
+++ b/browser/css/oxool.css
@@ -583,6 +583,10 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	top: -15px;
 }
 
+.tracked-deleted-comment-show .oxool-annotation-menubar {
+	display: none;
+}
+
 #main-document-content {
 	z-index: 0;
 }
