--- a/ossii/browser/css/oxool.css
+++ b/ossii/browser/css/oxool.css
@@ -17,6 +17,14 @@
 	background: var(--doc-identify-color) !important;
 }
 
+.w2ui-toolbar table.w2ui-button .w2ui-tb-caption,
+.w2ui-toolbar table.w2ui-button.checked .w2ui-tb-caption,
+.w2ui-reset table tr th, .w2ui-reset table tr td {
+	font-family: var(--oxool-font) !important;
+	font-size: var(--default-font-size) !important;
+	color: var(--color-main-text) !important;
+}
+
 .ui-dialog-titlebar {
 	background: var(--doc-identify-color) !important;
 }
