Add dark resource icon path
And add a dark icon of branding.

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I4b35c97ef032a1d93924a35c1bcd66e5de58f2b9

--- a/ossii/browser/css/branding-desktop.css
+++ b/ossii/browser/css/branding-desktop.css
@@ -25,7 +25,7 @@ body #document-header .document-logo {
 }
 
 [data-theme='dark'] #product-logo {
-	background: url('images/res/about_inverted.svg') no-repeat center/82px;
+	background: url('images/res/dark/about.svg') no-repeat center/82px;
 }
 
 #lokit-logo {
