Change product name and trademark icon.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I78ebf226cc5271322d0ecb3a16c403a4ca912043

--- a/ossii/browser/css/branding-desktop.css
+++ b/ossii/browser/css/branding-desktop.css
@@ -21,11 +21,11 @@ body #document-header .document-logo {
 
 #product-logo {
 	flex-grow: 1 !important;
-	background: url('images/res/about.svg') no-repeat center/82px;
+	background: url('images/res/about.png') no-repeat center/82px;
 }
 
 [data-theme='dark'] #product-logo {
-	background: url('images/res/dark/about.svg') no-repeat center/82px;
+	background: url('images/res/about.png') no-repeat center/82px;
 }
 
 #lokit-logo {
