--- a/ossii/browser/css/oxool.css
+++ b/ossii/browser/css/oxool.css
@@ -2,6 +2,7 @@
 :root {
 	/* font */
 	--oxool-font: 'Segoe UI', Tahoma, Arial, Helvetica, 'Liberation Sans', 'Microsoft JhengHei', 'Heiti TC', 'Noto Sans TC', 'Source Han Sans TC', sans-serif;
+	--jquery-ui-font: var(--oxool-font);
 
 	/* size */
 	--default-font-size: 16px; /* 預設的字型大小 */
