--- a/ossii/browser/admin/css/admin.css
+++ b/ossii/browser/admin/css/admin.css
@@ -7,7 +7,7 @@ header {
 	height: var(--header-height);
 }
 
-#sidebarMenu {
+#__SIDEBAR_MENU__ {
 	height: calc(100vh - var(--header-height));
 	overflow-x: hidden;
 	overflow-y: auto;
