--- a/browser/css/mobilewizard.css
+++ b/browser/css/mobilewizard.css
@@ -1187,6 +1187,7 @@ label.disabled {
 .ui-explorable-entry .oxool-annotation {
 	position: relative !important;
 	z-index: auto;
+	width: inherit;
 }
 
 .ui-explorable-entry .oxool-annotation-header {
