--- a/ossii/browser/css/oxool.css
+++ b/ossii/browser/css/oxool.css
@@ -109,7 +109,13 @@
 
 .context-menu-submenu:after {
 	right: 6px !important;
-	/*border-color: transparent transparent transparent #2f2f2f;*/
+	border-color: transparent transparent transparent #2f2f2f;
+	border-width: 0.3em 0 0.3em 0.3em !important;
+}
+
+[data-theme='dark'] .context-menu-submenu:after {
+	right: 6px !important;
+	border-color: transparent transparent transparent #fff;
 	border-width: 0.3em 0 0.3em 0.3em !important;
 }
 
