Optimize Admin Console.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I6f3d0cbb936d6972dce6bf1f863ea97778163609

--- a/ossii/browser/admin/css/admin.css
+++ b/ossii/browser/admin/css/admin.css
@@ -19,3 +19,16 @@ header {
 .offcanvas-header {
 	padding-top: var(--header-height);
 }
+
+.oxool-logo {
+	width: 220px;
+	height: 64px;
+	background-image: url("/oxool/resource/icon:light/getLogo()");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+[data-bs-theme="dark"] .oxool-logo {
+	background-image: url("/oxool/resource/icon:dark/getLogo()");
+}
