Introducing enhanced text input.
And adopts two input modes:
 1. Over the spot. (This is the default)
 2. On the spot.

If you want to switch between these two modes,
Just type: 切換輸入模式
and press <Enter>

Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I6f37d626b2979655e63559a64cb1501de431a816

--- a/ossii/browser/css/oxool.css
+++ b/ossii/browser/css/oxool.css
@@ -228,3 +228,43 @@
 #toolbar-down *{
 	font-size: var(--status-bar-font-size) !important;
 }
+
+.clipboard-container {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	left: 0px;
+	top: 0px;
+	width: 0px;
+	height: 0px;
+	background: var(--doc-identify-color);
+	border-radius: 3px;
+	padding: 3px;
+	border: 1px #e0e0e0 solid;
+	box-shadow: rgba(0, 0, 0, 0.70) 0px 5px 15px;
+	z-index: -1;
+	opacity: 0;
+}
+
+[data-theme='dark'] .clipboard-container {
+	box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+
+.clipboard-container.overspot {
+	width: auto;
+	height: auto;
+	opacity: 1;
+	z-index: 100;
+}
+
+#clipboard-area.clipboard {
+	max-width: calc(1rem * 15);
+	width: auto;
+	height: auto;
+	background-color: transparent;
+	font-family: var(--oxool-font);
+	font-size: 1rem;
+	border: none;
+	color: #fff;
+}
