--- a/ossii/browser/css/notebookbar.css
+++ b/ossii/browser/css/notebookbar.css
@@ -25,8 +25,16 @@
 
 .notebookbar.vseparator {
 	height: 100%;
-	width: 2px;
+	width: 1px;
 	margin-left: 2px;
 	margin-right: 2px;
-	background-color: var(--color-background-dark);
+	background-color: var(--color-menu-separator);
+}
+
+.notebookbar.separator {
+	height: 1px;
+	width: 100%;
+	margin-top: 2px;
+	margin-bottom: 2px;
+	background-color: var(--color-menu-separator);
 }
