Fixed the problem of being unable to match service root.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ie0d0f063c584be66c5448a088a6249955ba77239

--- a/ossii/browser/admin/css/admin.css
+++ b/ossii/browser/admin/css/admin.css
@@ -23,12 +23,12 @@ header {
 .oxool-logo {
 	width: 220px;
 	height: 64px;
-	background-image: url("/oxool/resource/icon:light/getLogo()");
+	background-image: url("%SERVICE_ROOT%/oxool/resource/icon:light/getLogo()");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 }
 
 [data-bs-theme="dark"] .oxool-logo {
-	background-image: url("/oxool/resource/icon:dark/getLogo()");
+	background-image: url("%SERVICE_ROOT%/oxool/resource/icon:dark/getLogo()");
 }
