--- a/ossii/browser/css/branding-desktop.css
+++ b/ossii/browser/css/branding-desktop.css
@@ -1,6 +1,6 @@
 /* Document logo */
 body #document-header .document-logo {
-	background-image: url('/oxool/resource/icon:dark/getLogo()') !important;
+	background-image: url('images/res/dark//logo.svg') !important;
 	background-repeat: no-repeat !important;
 	background-size: contain !important;
 	background-position: center !important;
@@ -16,7 +16,7 @@ body #document-header .document-logo {
 }
 
 [data-theme='dark'] #integrator-logo {
-	background: url('images/res/logo_inverted.svg') no-repeat center/256px;
+	background: url('images/res/dark/logo.svg') no-repeat center/256px;
 }
 
 #product-logo {
@@ -29,13 +29,13 @@ body #document-header .document-logo {
 }
 
 #lokit-logo {
-	background: url('/oxool/resource/icon:light/getAbout()') center top/82px no-repeat;
+	background: url('images/res/about.svg') center top/82px no-repeat;
 	display: flex;
 	flex-grow: 1;
 }
 
 [data-theme='dark'] #lokit-logo {
-	background: url('/oxool/resource/icon:dark/getAbout()') center top/82px no-repeat;
+	background: url('images/res/about.svg') center top/82px no-repeat;
 	display: flex;
 	flex-grow: 1;
 }
