--- a/ossii/browser/admin/css/login.css
+++ b/ossii/browser/admin/css/login.css
@@ -11,14 +11,14 @@ html, body {
 	width: 100%;
 	height: 64px;
 	margin-bottom: 1rem;
-	background-image: url("/oxool/resource/icon:light/getLogo()");
+	background-image: url("%SERVICE_ROOT%/oxool/resource/icon:light/getLogo()");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 }
 
 [data-bs-theme="dark"] .form-signin .oxool-banner {
-	background-image: url("/oxool/resource/icon:dark/getLogo()");
+	background-image: url("%SERVICE_ROOT%/oxool/resource/icon:dark/getLogo()");
 }
 
 .form-signin .form-floating:focus-within {
